# lunaris

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  client-desktop-installer.nsi  client_frontend_logs.txt  diagnose_llvm.ps1  docker-compose.yml  implementation_plan.md  lunaris_tls_cert.pem  lunaris_tls_key.pem  project_architecture.md  run.ps1  run.sh  server_token.txt  target  test_displays.sh  test_list_displays.rs
.github/workflows/: release.yml
agent/: Cargo.toml  build.rs  tauri.conf.json
agent/capabilities/: default.json
agent/icons/: icon.icns
agent/qml/: AgentWindow.qml  resources.qrc
agent/src/: agent_gui.cpp  agent_gui.h  agent_gui.rs  bridge.rs  buffer.rs  gui.rs  input.rs  main.rs  pairing.rs  vdisplay.rs
agent/src/video/: annexb.rs  mod.rs
agent/src/video/av1/: mod.rs  obu.rs  payloader.rs
agent/src/video/h264/: mod.rs  payloader.rs  reader.rs
agent/src/video/h265/: payloader.rs  reader.rs
agent/ui/: index.css  index.html  index.js
client/: Cargo.toml
client-desktop/: Cargo.toml  tauri.conf.json
client-desktop/src/: main.rs
client-qml/: Cargo.toml  build.rs
client-qml/qml/: Dashboard.qml  LunarisComboBox.qml  LunarisMenuBar.qml  Settings.qml  main.qml  resources.qrc
client-qml/src/: audio.rs  bridge.rs  d3d11_video_item.cpp  d3d11_video_item.h  decoder.rs  gpu_video_item.cpp  gpu_video_item.h  input.rs  lib.rs  main.rs  protocol.rs  vaapi_dmabuf_video_item.cpp  vaapi_dmabuf_video_item.h  video_helper.cpp  video_helper.h
client-tauri/: Cargo.toml  tauri.conf.json
client-tauri/icons/: icon.icns
client-tauri/src/: main.rs  protocol.rs
client/src/: decoder.rs  input.rs  main.rs  protocol.rs  ui.rs
common/: Cargo.toml
common/src/: lib.rs
desktop/: pubspec.yaml
desktop/lib/: main.dart
desktop/lib/services/: agent_manager.dart  signaling.dart
desktop/lib/views/: dashboard.dart  login.dart  stream_player.dart
scratch/test_arboard/: Cargo.toml
scratch/test_arboard_persistence/: Cargo.toml
scripts/: build-appimage.sh
scripts/virtual-display/: 20-lunaris-virtual-dp2.conf  README.md  activate-dp2.sh  apply.sh  gen_edid.py  revert.sh
server/: Cargo.toml
server/src/: admin.rs  auth.rs  bridge.rs  buffer.rs  db.rs  input.rs  main.rs  pairing.rs  signaling.rs
server/src/video/h264/: reader.rs
web/: package-lock.json
web/src/: App.css  App.tsx  index.css
web/src/components/: AdminGroups.tsx  AdminTurnServers.tsx  AdminUsers.tsx  StreamPlayer.tsx
