[workspace]
members = [
    "server",
    "agent",
    "common",
    "client-desktop",
    "client-qml",
]
resolver = "2"

[workspace.package]
version = "0.1.10"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[patch."https://github.com/collyn/lunaris-media.git"]
lunaris-media = { path = "../lunaris-media" }


