[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
moonlight-common = { git = "https://github.com/MrCreativ3001/moonlight-common-rust.git", rev = "7ab3e3f5ab50e21b64153bec2104ed2bac1f4313", features = [
    "tokio",
    "tokio-hyper",
    "openssl",
    "stream-c",
    "serde",
], default-features = false }

tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-native-certs"] }
webrtc = "0.17.1"
openssl = "0.10"
pem = "3.0"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.0"
futures-util = "0.3"
futures = "0.3"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
url = "2.5"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
hostname = "0.4"
urlencoding = "2.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking", "stream"] }
zip = "0.6"
flate2 = "1.0"
tar = "0.4"
dirs = "5.0"
tempfile = "3.10"
libc = "0.2"



