[package]
name = "agent"
version.workspace = true
edition.workspace = true

[features]
default = ["gui"]
gui = []

[dependencies]
common = { path = "../common" }
lunaris-media = { git = "https://github.com/collyn/lunaris-media.git" }
bitflags = "2"

tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls", "rustls-tls-native-roots"] }
native-tls = "0.2"
webrtc = "0.17.1"
wtransport = { version = "0.7.1", features = ["self-signed"] }
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
anyhow = "1.0"
once_cell = "1.18"
thiserror = "1.0"
bytes = "1.0"
futures-util = "0.3"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
num-derive = "0.4"
num-traits = "0.2"
hostname = "0.4"
urlencoding = "2.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking", "stream"] }
zip = "0.6"
dirs = "5.0"
libc = "0.2"
cxx = "1.0"
cxx-qt = "0.6"
cxx-qt-lib = { version = "0.6", features = ["qt_gui", "qt_qml"] }

[build-dependencies]
cxx-qt-build = "0.6"



