[package]
name = "client-qml"
version = "0.1.0"
edition = "2021"

[lib]
name = "client_qml"
path = "src/lib.rs"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-native-certs"] }
webrtc = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
cpal = "0.15"
ffmpeg-next = "7.0"
url = "2.5"
opus = "0.2"
bytes = "1.0"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
hostname = "0.4"


# Qt6 bindings dependencies
cxx = "1.0"
cxx-qt = "0.6"
cxx-qt-lib = { version = "0.6", features = ["qt_gui", "qt_qml"] }

[build-dependencies]
cxx-qt-build = "0.6"
