[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-native-certs"] }
webrtc = "0.17.1"
serde_json = "1.0"
anyhow = "1.0"
cpal = "0.15"
ffmpeg-next = "8.0"
sdl2 = "0.36"
url = "2.5"
opus = "0.2"
bytes = "1.0"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusttype = "0.9"
