[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
jsonwebtoken = "9.0"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
once_cell = "1.18"
chrono = { version = "0.4", features = ["serde"] }

webrtc = "0.17.1"
wtransport = { version = "0.7.1", features = ["self-signed"] }
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.0"
num-derive = "0.4"
num-traits = "0.2"


